# OrgSmith

./: .gitignore  BACKLOG.md  CLAUDE.md  CODEREVIEW.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DISTRIBUTIONS.md  EVAL-SPLITS.md  EXTERNAL-CRITIQUE-2026-07-17.md  MODEL-AB.md  RECIPE-FORMAT.md  REVIEW-CALIBRATION.md  SCALE.md
hooks/: pre-push
orgsmith/: __init__.py  acl.py  airlock.py  artifacts.py  assemble.py  charter.py  cli.py  distributions.py  doctor.py  effort.py  namescreen.py  naming.py  paths.py  schemas.py  schemas_export.py  seeds.py  state.py  status.py
schemas/: acl@1.json  authoring-deliverable@1.json  charter@1.json  corpus-metrics@1.json  distribution-lists@1.json  docir@1.json  engagements@1.json  enrichment-deliverable@1.json  finance@1.json  foundation@1.json  graph-expected@1.json  graph@1.json  manifest-entry@1.json  mention-map@1.json  review-finding@1.json  review-findings@1.json  review-sample@1.json  scan-pages@1.json  state@1.json  style-specs@1.json  work-order@1.json
tests/: conftest.py  test_org_fleet.py  test_org_regen.py  test_short.py  test_unit_acl.py  test_unit_affiliation_docs.py  test_unit_airlock.py  test_unit_business_calendar.py  test_unit_compat.py  test_unit_docplan_registry.py  test_unit_doctor.py  test_unit_eml.py  test_unit_engagement_sample.py  test_unit_eval_splits.py  test_unit_evals.py  test_unit_evals_formats.py  test_unit_graph_depth.py  test_unit_hardcases.py  test_unit_hardening.py  test_unit_history.py  test_unit_legacy.py  (+21 more)
(+1815 files in other folders)
