# Project metadata and pytest configuration only. The package is run from
# the repo root (python -m orgsmith); it is not built or installed.

[project]
name = "orgsmith"
# Kept in lockstep with orgsmith.__version__ (the source of truth);
# pinned by a short-tier test.
version = "1.4.0"
description = "Generator of complete synthetic organizations with ground truth"
authors = [{ name = "Peter Zatloukal" }]
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "short: static and configuration checks (pre-push tier)",
    "unit: deterministic logic, schemas, renderers, airlock contract",
    "org: full validation over the committed fleet in companies/",
]
addopts = "-q"
